# bazel-minimal-example

./: .gitignore  BUILD  Makefile  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
guiver/: BUILD.bazel  backend.go  config.go  os_client.go  post_processor.go  publish_event.go  publish_event_test.go  pubsub_topic.go  test_topic.go
