load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "guiver",
    srcs = [
        "backend.go",
        "config.go",
        "os_client.go",
        "post_processor.go",
        "publish_event.go",
        "pubsub_topic.go",
        "test_topic.go",
    ],
    importpath = "github.com/flakrimjusufi/bazel-minimal-example/guiver",
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_cloud_go_pubsub//:pubsub",
        "@org_golang_x_net//context",
    ],
)

go_test(
    name = "guiver_test",
    srcs = ["publish_event_test.go"],
    tags = ["fast"],
    deps = [
        ":guiver",
        "@com_github_smartystreets_goconvey//convey",
    ],
)
